@@ -485,7 +485,6 @@ enum
     WC_DEBUG_PAINT = 130,
     WC_VIEW_CLIPPING = 131,
     WC_OBJECT_LOAD_ERROR = 132,
-    WC_NETWORK = 133,
 
     // Only used for colour schemes
     WC_STAFF = 220,
